feat: 코멘트 좋아요(도움돼요) 수 및 여부 확인 기능