@@ -1,6 +1,7 @@
 package com.application.poppool.domain.popup.service;
 
 import com.application.poppool.domain.comment.entity.CommentEntity;
+import com.application.poppool.domain.comment.service.CommentService;
 import com.application.poppool.domain.popup.dto.resonse.GetPopUpStoreDetailResponse;
 import com.application.poppool.domain.popup.entity.PopUpStoreEntity;
 import com.application.poppool.domain.popup.repository.PopUpStoreRepository;
@@ -21,6 +22,7 @@ public class PopUpStoreService {
 
     private final UserRepository userRepository;
     private final PopUpStoreRepository popUpStoreRepository;
+    private final CommentService commentService;
 
 
     @Transactional(readOnly = true)
@@ -31,6 +33,7 @@ public class PopUpStoreService {
 
         boolean isLogin = false;
 
+        /** 로그인 여부 체크 */
         if (SecurityUtils.isAuthenticated()) {
             isLogin = true;
         }
@@ -39,13 +42,21 @@ public class PopUpStoreService {
                 .orElseThrow(() -> new NotFoundException(ErrorCode.DATA_NOT_FOUND));
 
 
-        // 댓글 조회 로직
-        List<CommentEntity> comments = popUpStore.getComments();
+        /** 댓글 조회 */
+        List<CommentEntity> comments = commentService.getPopUpStoreComments(popUpStoreId);
 
-        // 댓글 좋아요 여부 확인
-        List<GetPopUpStoreDetailResponse.Comment> commentsWithLikeStatus = comments.stream()
-                .map(comment -> new CommentWithLikeStatusDto(comment, commentService.isCommentLikedByUser(user, comment)))
-                .collect(Collectors.toList());
+
+        /** Entity -> Dto, 댓글 좋아요(도움돼요) 여부 확인 , 좋아요 수 */
+        List<GetPopUpStoreDetailResponse.Comment> commentList = comments.stream()
+                .map(comment -> GetPopUpStoreDetailResponse.Comment.builder()
+                        .nickname(comment.getUser().getNickname())
+                        .profileImageUrl(comment.getUser().getProfileImageUrl())
+                        .content(comment.getContent())
+                        .isLiked(commentService.isCommentLikedByUser(user, comment))
+                        .likeCount(commentService.getLikeCount(comment))
+                        .createDateTime(comment.getCreateDateTime())
+                        .build())
+                .toList();
 
 
         return GetPopUpStoreDetailResponse.builder()
@@ -55,6 +66,7 @@ public class PopUpStoreService {
                 .endDate(popUpStore.getEndDate())
                 .address(popUpStore.getAddress())
                 .isLogin(isLogin)
+                .commentList(commentList)
                 .build();
 
     }
